paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_1/sample_003/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/type_def_1/sample_003/target.rs:45:14
   |
45 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.